- [ADD] is an addition of a new feature
- [FIX] is a bug fix
- [MAINT] is a maintenance change for general improvement and proactive avoidance of potential issues

WARNING: Until version `1.0.0` there is a greater possibility of breaking changes.

== `0.x` changes

=== `0.2.8` (in progress)

- Bump deps
* [MAINT] OpenTelemetry `1.40.0`

=== `0.2.7` (2024-07-01)

- Bump deps
* [MAINT] OpenTelemetry `1.39.0`
** [ADD] Support for creating and setting gauges that take measurements synchronously.
Use `steffan-westcott.clj-otel.api.metrics.instrument/set!` to synchronously set a gauge to a given measurement.
** [ADD] Option to set explicit bucket boundaries advice for histograms
** [ADD] `:links` option for `add-span-data!`
** [FIX] `metrics-by-route-interceptors` should record requests that have 404 HTTP response code
** [BREAK] Removed modules `clj-otel-exporter-jaeger-grpc` and `clj-otel-exporter-jaeger-thrift` as the Java libraries `opentelemetry-exporter-jaeger` and `opentelemetry-exporter-jaeger-thrift` are no longer published.
Jaeger has native support for OTLP, use `clj-otel-exporter-otlp` instead to configure an OTLP exporter.
** [BREAK] In module `clj-otel-exporter-zipkin`, `span-exporter` options `:sender` and `:encoder` now take `zipkin2.reporter.BytesMessageSender` and `zipkin2.codec.BytesEncoder` values
* [MAINT] Various build deps
- Refactored microservice examples
** [MAINT] Removed uberjar build step.
All application instances now use a `clojure` Docker image rather than custom image containing an uberjar.
** [ADD] For telemetry backend, changed to use Grafana with Grafana Tempo and Prometheus.
Preconfigured Grafana dashboards for metrics and traces are included.
** [ADD] Added state lifecycle management, using `with-open` and `closeable` pattern.
** [MAINT] Altered Ring/Pedestal servers to reload routes on every HTTP request.
** [ADD] Added embedded nREPL server to all application and load-gen instances for remote access.