@@ -26,10 +26,10 @@
            io.opentelemetry.instrumentation/opentelemetry-resources {:mvn/version "2.5.0-alpha"}
 
            ;; Pedestal HTTP server with Jetty integration
-           io.pedestal/pedestal.interceptor {:mvn/version "0.6.4"}
-           io.pedestal/pedestal.jetty {:mvn/version "0.6.4"}
-           io.pedestal/pedestal.route {:mvn/version "0.6.4"}
-           io.pedestal/pedestal.service {:mvn/version "0.6.4"}
+           io.pedestal/pedestal.interceptor {:mvn/version "0.7.0"}
+           io.pedestal/pedestal.jetty {:mvn/version "0.7.0"}
+           io.pedestal/pedestal.route {:mvn/version "0.7.0"}
+           io.pedestal/pedestal.service {:mvn/version "0.7.0"}
 
            ;; Functions for logging strings and maps using Log4j2
            org.example/common.log4j2.utils {:local/root "../../../../common/log4j2.utils"}
