@@ -28,6 +28,9 @@ WARNING: Until version `1.0.0` there is a greater possibility of breaking change
 
 - Bump deps
 * [MAINT] OpenTelemetry `1.40.0`
+* [BREAK] Pedestal `0.7.0` in microservices examples.
+Pedestal `0.7.0` introduces its own support for OpenTelemetry, including a new interceptor `io.pedestal.http.tracing/request-tracing-interceptor`.
+This overlaps functionality with `clj-otel` interceptors, so should be disabled by setting `:io.pedestal.http/tracing` to `nil` in the Pedestal service map.
 
 === `0.2.7` (2024-07-01)
 
